WIP Global polls

--- a/translations/admin+intl-icu.en.xlf
+++ b/translations/admin+intl-icu.en.xlf
@@ -3442,7 +3442,7 @@
       </notes>
       <segment>
         <source>Beschreibung</source>
-        <target>Decription</target>
+        <target>Description</target>
       </segment>
     </unit>
     <unit id="7Cc8BkZ" name="Anonyme Gruppe">
