--- a/translations/global+intl-icu.en.xlf
+++ b/translations/global+intl-icu.en.xlf
@@ -248,7 +248,7 @@
       </notes>
       <segment>
         <source>Werbung ist verboten (Links etc.)</source>
-        <target>Advertising (links etc.) is forbidden; feel free to link the eternal twin discord though!</target>
+        <target>Advertising (links etc.) is forbidden; feel free to link the Eternaltwin discord though!</target>
       </segment>
     </unit>
     <unit id="58t6egl" name="Heute um">
