--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -3551,7 +3551,7 @@
       </notes>
       <segment>
         <source>Du kannst deinen Spielernamen nicht ändern, weil du einen zugehörigen Eternal Twin Account hast. Du musst zu deinem Eternal Twin-Konto gehen, um deinen Spielernamen zu ändern.</source>
-        <target>No puedes cambiar tu nombre de jugador porque tienes una cuenta asociada de Eternal Twin. Deberá ir a su cuenta de Eternal Twin para cambiar su nombre de jugador.</target>
+        <target>No puedes cambiar tu nombre de jugador porque tienes una cuenta asociada de Eternaltwin. Deberá ir a su cuenta de Eternaltwin para cambiar su nombre de jugador.</target>
       </segment>
     </unit>
     <unit id=".NQ7ahe">
