--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -3559,7 +3559,7 @@
       </notes>
       <segment>
         <source>Du kannst deinen Spielernamen nicht ändern, weil du einen zugehörigen Eternal Twin Account hast. Du musst zu deinem Eternal Twin-Konto gehen, um deinen Spielernamen zu ändern.</source>
-        <target>Vous ne pouvez pas changer de pseudo car vous avez associé un compte Eternal Twin. Vous devez vous rendre sur votre compte Eternal Twin pour changer de pseudo.</target>
+        <target>Vous ne pouvez pas changer de pseudo car vous avez associé un compte Eternaltwin. Vous devez vous rendre sur votre compte Eternaltwin pour changer de pseudo.</target>
       </segment>
     </unit>
     <unit id=".NQ7ahe">
