--- a/translations/admin+intl-icu.en.xlf
+++ b/translations/admin+intl-icu.en.xlf
@@ -4948,5 +4948,127 @@
         <target>Drop all items from all citizens</target>
       </segment>
     </unit>
+    <unit id="qtaAXm5" name="Auszeichnungen wiederherstellen">
+      <notes>
+        <note category="german">Auszeichnungen wiederherstellen</note>
+        <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>Auszeichnungen wiederherstellen</source>
+        <target>Restore pictos</target>
+      </segment>
+    </unit>
+    <unit id="rzaAoA6" name="Auszeichnungen aller Einwohner dieser Stadt löschen">
+      <notes>
+        <note category="german">Auszeichnungen aller Einwohner dieser Stadt löschen</note>
+        <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>Auszeichnungen aller Einwohner dieser Stadt löschen</source>
+        <target>Delete the pictos of this town</target>
+      </segment>
+    </unit>
+    <unit id="WqdvJmx" name="Seelenpunkte wiederherstellen">
+      <notes>
+        <note category="german">Seelenpunkte wiederherstellen</note>
+        <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>Seelenpunkte wiederherstellen</source>
+        <target>Restore soul points</target>
+      </segment>
+    </unit>
+    <unit id="p_4sZnN" name="Seelenpunkte aller Einwohner dieser Stadt löschen">
+      <notes>
+        <note category="german">Seelenpunkte aller Einwohner dieser Stadt löschen</note>
+        <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>Seelenpunkte aller Einwohner dieser Stadt löschen</source>
+        <target>Delete the soulpoints of this town</target>
+      </segment>
+    </unit>
+    <unit id="dMSxQKT" name="Alle Sanktionen entfernen">
+      <notes>
+        <note category="german">Alle Sanktionen entfernen</note>
+        <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>Alle Sanktionen entfernen</source>
+        <target>Remove all sanctions</target>
+      </segment>
+    </unit>
+    <unit id="OSDitIr" name="Stadt nicht in der Seele listen">
+      <notes>
+        <note category="german">Stadt nicht in der Seele listen</note>
+        <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>Stadt nicht in der Seele listen</source>
+        <target>Exclude the town from the soul</target>
+      </segment>
+    </unit>
+    <unit id="0qROaTY" name="Seelenpunkte dieses Bürgers entfernen">
+      <notes>
+        <note category="german">Seelenpunkte dieses Bürgers entfernen</note>
+        <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>Seelenpunkte dieses Bürgers entfernen</source>
+        <target>Remove this citizen's soul points</target>
+      </segment>
+    </unit>
+    <unit id="2UIa_nW" name="Ranking für diesen Bürger wiederherstellen">
+      <notes>
+        <note category="german">Ranking für diesen Bürger wiederherstellen</note>
+        <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>Ranking für diesen Bürger wiederherstellen</source>
+        <target>Rerank this citizen</target>
+      </segment>
+    </unit>
+    <unit id="YYl_8gg" name="Bürger aus dem Ranking entfernen">
+      <notes>
+        <note category="german">Bürger aus dem Ranking entfernen</note>
+        <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>Bürger aus dem Ranking entfernen</source>
+        <target>Remove this citizen from the ranking</target>
+      </segment>
+    </unit>
+    <unit id="Rh2vAO6" name="Auszeichnungen dieses Bürgers entfernen">
+      <notes>
+        <note category="german">Auszeichnungen dieses Bürgers entfernen</note>
+        <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>Auszeichnungen dieses Bürgers entfernen</source>
+        <target>Remove this citizen's pictos</target>
+      </segment>
+    </unit>
+    <unit id="5hVSTeI" name="Seelenpunkte für diesen Bürger wiederherstellen">
+      <notes>
+        <note category="german">Seelenpunkte für diesen Bürger wiederherstellen</note>
+        <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Seelenpunkte für diesen Bürger wiederherstellen</source>
+        <target>Restore the soul points of this citizen</target>
+      </segment>
+    </unit>
+    <unit id="X83LtBA" name="Auszeichnungen für diesen Bürger wiederherstellen">
+      <notes>
+        <note category="german">Auszeichnungen für diesen Bürger wiederherstellen</note>
+        <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Auszeichnungen für diesen Bürger wiederherstellen</source>
+        <target>Restore the pictos of this citizen</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
